--- a/drink.html
+++ b/drink.html
@@ -69,10 +69,10 @@
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
-                <h4>The challenge</h4>
+                <h4>Challengesnge</h4>
                 <p class="my-3">Balancing out the design of the drinks and the website’s theme in order to attract the attention of the audience.</p>
 
-                <h4>The result</h4>
+                <h4>Resultslt</h4>
                 <p class="my-3">Website layout was readable and informative to the audience. Color scheme is very attractive and attention appealing.</p>
             </div>
         </div>
