--- a/sentosa.html
+++ b/sentosa.html
@@ -71,10 +71,10 @@
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
-                <h4>The challenge</h4>
+                <h4>Challengesnge</h4>
                 <p class="my-3">Understanding how to implement certain functions to certain element tags with the CSS styling intact and ensuring website is not complex for user experience.</p>
 
-                <h4>The result</h4>
+                <h4>Resultslt</h4>
                 <p class="my-3">Able to function well like an online store website. Design was not complex and it fulfils the desire purpose.</p>
             </div>
         </div>
