--- a/styleguide.html
+++ b/styleguide.html
@@ -70,10 +70,10 @@
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
-                <h4>The challenge</h4>
+                <h4>Challengesnge</h4>
                 <p class="my-3">Deciding on the color theme to match with the website I have designed and how to present myself in this entire style guide.</p>
 
-                <h4>The result</h4>
+                <h4>Resultslt</h4>
                 <p class="my-3">Theme designed fits well with the website, along with added styles to portray myself to the audience.</p>
             </div>
         </div>
