--- a/timbuktu.html
+++ b/timbuktu.html
@@ -69,10 +69,10 @@
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
-                <h4>The challenge</h4>
+                <h4>Challengesnge</h4>
                 <p class="my-3">Designing the website to attract the audience attention and delivering the main points to them which WIX may have limited options while developing the website.</p>
 
-                <h4>The result</h4>
+                <h4>Resultslt</h4>
                 <p class="my-3">Main points of the website was well presented, along with tablet and mobile versions of the website. Students are able to locate the information in a simple manner.</p>
             </div>
         </div>
