--- a/uobFooter.html
+++ b/uobFooter.html
@@ -70,10 +70,10 @@
     <article class="about pt-md-5 pt-sm-4 pb-4">
         <div class="container text-light">
             <div class="inner-wrapper justify-content-center align-items-center">
-                <h4>The challenge</h4>
+                <h4>Challengesnge</h4>
                 <p class="my-3">Developing a straightforward footer so that users are able to locate various pages of website and content of website is still viewable without the footer blocking it. </p>
 
-                <h4>The result</h4>
+                <h4>Resultslt</h4>
                 <p class="my-3">Footer was well developed for users to use, along with a mobile sized footer that has a collapse button to collapse the footer while viewing the content.</p>
             </div>
         </div>
