--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="col-lg-5 col-md-9 mb-5">
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
-                        <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
+                        <img class="my-md-4" src="assets/preview/errandGo_preview.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
                             <h4>Errand Runner Booking Application</h4>
                             <p class="mt-md-3">
