--- a/drink.html
+++ b/drink.html
@@ -13,34 +13,6 @@
     <title>DaiXuan's Portfolio</title>
 </head>
 <body>
-    <!-- <header class="py-0">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <h3 class="navbar-brand"><a class="nav-link" href="index.html">DaiXuan</a></h3>
-
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-					
-					<div class="collapse navbar-collapse" id="navbarSupportedContent" class="navBar">
-						<ul class="navbar-nav ml-auto">
-							<li class="nav-item">
-								<a class="nav-link" href="about.html">About Me</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="work.html">My Work</a>
-							</li>
-							<li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="resources/My Resume.pdf">Resume</a>
-                            </li>
-						</ul>
-                    </div>  
-            </div>
-        </nav>
-    </header> -->
     <header class="py-0">
         <div id="nav-placeholder"></div>
     </header>
@@ -50,7 +22,7 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Drink promotion<br> website</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/drinkPromo.jpg" width="340" height="240" style="width: 45%;" alt="drink promotion">
+                    <img class="my-4 pl-xl-4 mx-sm-4 shadow-left" src="assets/preview/drinkPromo.jpg" width="340" height="240" style="width: 45%;" alt="drink promotion">
                     <div class="mt-lg-5 mx-2 px-md-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Designed a website mainly the homepage to promote a line of drinks with a redesigned packaging.</p>
