--- a/eye_rest.html
+++ b/eye_rest.html
@@ -36,8 +36,8 @@
             <div class="inner-wrapper">
                 <h3 class="mt-3">Eye Rest</h3>
                 <div class="projectBox d-lg-flex justify-content-around background-light mt-lg-4 p-md-3">
-                    <img class="my-4 ml-lg-4" src="" width="380" height="240" alt="KirbyMart">
-                    <div class="mt-lg-5 mx-2 px-xl-5">
+                    <img class="m-4 ml-lg-4" src="assets/preview/eyerest_preview.png" width="380" height="240" alt="KirbyMart">
+                    <div class="mt-lg-5 mx-1 px-xl-5">
                         <h4>Project Brief</h4>
                         <p class="text-dark lh-sm">Eye Rest is an Android mobile application designed to combat digital eye strain by encouraging users to take regular breaks 
                             and perform simple eye exercises done with a team. 
