--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
                         <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
-                            <h4>Eye Rest Mobile Application</h4>
+                            <h4>Eye Rest Mobile App</h4>
                             <p class="mt-md-3">
                                 <a href="eye_rest.html" class="btn-primary">View work</a>
                             </p>
@@ -105,7 +105,7 @@
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
                         <img class="my-md-4" src="assets/preview/errandGo_preview.png" width="300" height="160" alt="sentosa">
                         <div class="media-body ml-1">
-                            <h4>Errand Runner Booking Application</h4>
+                            <h4>Errand Runner Booking (ErrandGo)</h4>
                             <p class="mt-md-3">
                                 <a href="errandgo.html" class="btn-primary">View work</a>
                             </p>
