--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
                             <img class="my-4" src="assets/preview/eyerest_preview.png" width="200" height="170">
                             <div class="media-body ml-1">
-                                <h4>Sentosa online<br> store website</h4>
+                                <h4>Eye Rest Mobile App</h4>
                                 <p class="mt-3">
                                     <a href="eye_rest.html" class="btn-primary">View work</a>
                                 </p>
@@ -38,7 +38,7 @@
                         <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center p-md-3">
                             <img class="my-4" src="assets/preview/errandGo_preview.png" width="220" height="180">
                             <div class="media-body ml-1">
-                                <h4>Sentosa online<br> store website</h4>
+                                <h4>Errand Runner Booking (ErrandGo)</h4>
                                 <p class="mt-3">
                                     <a href="errandgo.html" class="btn-primary">View work</a>
                                 </p>
