--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <div class="col-lg-5 col-md-9 mb-5">
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
-                        <img class="my-md-4" src="assets/preview/Sentosa.png" width="300" height="160" alt="sentosa">
+                        <img class="my-md-4" src="assets/preview/eyerest_preview.png" width="200" height="160" alt="sentosa">
                         <div class="media-body ml-1">
                             <h4>Eye Rest Mobile App</h4>
                             <p class="mt-md-3">
@@ -103,9 +103,9 @@
 
                 <div class="col-lg-5 col-md-9 mb-5">
                     <div class="media d-md-flex flex-row-reverse justify-content-around align-items-center px-3">
-                        <img class="my-md-4" src="assets/preview/errandGo_preview.png" width="300" height="160" alt="sentosa">
+                        <img class="my-md-4" src="assets/preview/errandGo_preview.png" width="220" height="180" alt="sentosa">
                         <div class="media-body ml-1">
-                            <h4>Errand Runner Booking (ErrandGo)</h4>
+                            <h4>Errand Runner <br>Booking (ErrandGo)</h4>
                             <p class="mt-md-3">
                                 <a href="errandgo.html" class="btn-primary">View work</a>
                             </p>
